chore: 添加美团面经

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 										<h2>关于我</h2>
 										<p>专注于前端进阶，致力于打造优质博客网站</p>
 									</header>
-									<p>目前在字节跳动核心部门担任前端研发，运营公众号『我是前端喵』，欢迎关注，欢迎入群交流</p>
+									<p>曾在字节跳动核心部门担任前端研发，运营公众号『我是前端喵』，欢迎关注，欢迎入群交流</p>
 								</div>
 							</section>
 
